# HDDL-Parser

./: Cargo.toml  README.md
src/language_server/: diagnostic_utils.rs
src/lexical_analyzer/: token_types.rs  tokenizer.rs
src/lexical_analyzer/tests/: lexer_tests.rs
src/output/errors/: lexical.rs  semantic.rs
src/semantic_analyzer/: undefined_elements.rs
src/semantic_analyzer/analyzers/: domain_analyzer.rs  problem_analyzer.rs
src/syntactic_analyzer/domain_parser/: formula_parser.rs  function_parser.rs  mod.rs  router.rs
src/syntactic_analyzer/syntax_tree/: domain.rs
src/syntactic_analyzer/syntax_tree/nodes/: formula.rs  function.rs  mod.rs
src/syntactic_analyzer/tests/: syntax_tests.rs
tests/: integration_flawed.rs  integration_ipc.rs
