[package]
name = "hddl_analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "ipc"
path = "tests/integration_ipc.rs"

[[test]]
name = "flawed"
path = "tests/integration_flawed.rs"


[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
petgraph = "*"
serde = { version = "1.*", features = ["derive"] } 
serde_json = "1.*" 

tower-lsp = "0.20"
tokio = { version = "1.28", features = ["full"] }
